Must repeat scm, otherwise gets modified after inheritance

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	<artifactId>utils</artifactId>
 	<name>Decision Deck utils</name>
 	<description>Various classes providing utility methods such as graph manipulations, not specifically related to MCDA methods.</description>
+	<scm>
+		<connection>scm:git:git://github.com/oliviercailloux/jmcda-${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://github.com/oliviercailloux/jmcda-${project.artifactId}.git</developerConnection>
+		<url>https://github.com/oliviercailloux/jmcda-${project.artifactId}</url>
+	</scm>
 	<dependencies>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
