--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>pom</artifactId>
 		<version>0.6.0</version>
 	</parent>
-	<version>0.5.4</version>
+	<version>0.5.5-SNAPSHOT</version>
 	<artifactId>utils</artifactId>
 	<name>Decision Deck utils</name>
 	<description>Various classes providing utility methods such as graph manipulations, not specifically related to MCDA methods.</description>
