--- a/.github/workflows/Maven CI.yaml
+++ b/.github/workflows/Maven CI.yaml
@@ -13,6 +13,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 14
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          key: maven-cache
+          path: ~/.m2/repository
       - name: Maven
         run: mvn -B verify
 
