--- a/.github/workflows/Maven CI.yaml
+++ b/.github/workflows/Maven CI.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: 17
       - name: Cache
         uses: actions/cache@v2
         with:
@@ -20,5 +20,5 @@ jobs:
           restore-keys: maven-cache
           path: ~/.m2/repository
       - name: Maven
-        run: mvn -B verify
+        run: mvn verify
 
